fix(styles): border radius too large

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,7 +5,7 @@ $text-on-accent: white;
 
 $secondary-accent: #ddded6;
 
-$border-radius-sm: 0.3rem;
+$border-radius-sm: 0.2rem;
 
 $shadow-button-hover: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -thin;
 
